[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.2.17", features = ["derive"] }
libc = "0.2"
rand = "0.8.5"
signal-hook = "0.3.14"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[[example]]
name = "test-daemon"

[dev-dependencies]
