[package]
name = "nerpa_controller"
version = "0.1.0"
authors = ["Debnil Sur <dsur@vmware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "nerpa-controller"
path = "src/nerpa_controller/main.rs"

[dependencies]
byteorder = "1.4.2"
differential_datalog = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/differential_datalog"}
futures = "0.3.12"
grpcio = "0.8.0"
itertools = "0.10.0"
libc = "0.2.98"
num-traits = "0.2.14"
ovsdb_client = {path = "../ovsdb_client"}
p4ext = {path = "../p4ext"}
proto = {path = "../proto"}
protobuf = "2.22.0"
protobuf-codegen = "2.22.0"
snvs = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog"}
tokio = { version = "1.2.0", features = ["full"] }
types = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/types"}
types__snvs_dp = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/types/snvs_dp"}
types__Snvs_mp = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/types/Snvs_mp"}
clap = "2.33.3"


[build-dependencies]
protoc-grpcio = "3.0.0"
