[package]
name = "nerpa_controller"
version = "0.1.0"
authors = ["Debnil Sur <dsur@vmware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "nerpa-controller"
path = "src/nerpa_controller/main.rs"

[dependencies]
byteorder = "1.4.3"
# differential_datalog = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/differential_datalog"}
differential_datalog = {path = "../nerpa_controlplane/l2sw/l2sw_ddlog/differential_datalog"}
futures = "0.3.12"
grpcio = "0.8.0"
itertools = "0.10.0"
l2sw = {path = "../nerpa_controlplane/l2sw/l2sw_ddlog"}
num-traits = "0.2.14"
p4ext = {path = "../p4ext"}
proto = {path = "../proto"}
protobuf = "2.22.0"
protobuf-codegen = "2.22.0"
# snvs = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog"}
tokio = { version = "1.2.0", features = ["full"] }
# types = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/types"}
types = {path = "../nerpa_controlplane/l2sw/l2sw_ddlog/types"}
# types__snvs_dp = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/types/snvs_dp"}
# types__snvs_mp = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/types/snvs_mp"}


[build-dependencies]
protoc-grpcio = "3.0.0"
