[package]
name = "nerpa_controller"
version = "0.1.0"
authors = ["Debnil Sur <dsur@vmware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "nerpa-controller"
path = "src/nerpa_controller/main.rs"

[build-dependencies]
protoc-grpcio = "3.0.0"

[dependencies]
futures = "0.3.12"
grpcio = "0.9.0"
itertools = "0.10.0"
num-traits = "0.2.14"
p4ext = {path = "../p4ext"}
proto = {path = "../proto"}
protobuf = "2.22.0"
protobuf-codegen = "2.22.0"
tokio = { version = "1.2.0", features = ["full"]}
differential_datalog = {path = "/home/dsur/dev/nerpa/nerpa_controlplane/l2sw/l2sw_ddlog/differential_datalog"}
l2sw = {path = "/home/dsur/dev/nerpa/nerpa_controlplane/l2sw/l2sw_ddlog"}
types = {path = "/home/dsur/dev/nerpa/nerpa_controlplane/l2sw/l2sw_ddlog/types"}
digest2ddlog = {path = "/home/dsur/dev/nerpa/digest2ddlog"}
