[package]
name = "ovsdb_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differential_datalog = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/differential_datalog"}
libc = "0.2.98"
ovsdb-sys = {path = "../ovsdb-sys"}
