[package]
name = "ovsdb_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differential_datalog = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/differential_datalog"}
libc = "0.2.98"
ddlog_ovsdb_adapter = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog/ovsdb"}
ovsdb-sys = {path = "../ovsdb-sys"}
snvs = {path = "../nerpa_controlplane/snvs_exp/snvs_ddlog", features = ["ovsdb"]}
memoffset = "0.6.4"
serde = "1.0.126"
serde_json = "1.0.65"
