[package]
name = "p4ext"
version = "0.1.0"
authors = ["Debnil Sur <dsur@vmware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
futures = "0.3.12"
grpcio = "0.8.0"
itertools = "0.10.0"
proto = {path = "../proto"}
protobuf = "2.22.0"
protobuf-codegen = "2.22.0"
rusty-fork = "0.3.0"
tokio = { version = "1.2.0", features = ["full"] }

[dev-dependencies]
rusty-fork = "0.3.0"
