[package]
name = "p4info2ddlog"
version = "0.1.0"
authors = ["Ben Pfaff <bpfaff@vmware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "p4info2ddlog"
path = "src/p4info2ddlog/main.rs"

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
multimap = "0.8.3"
p4ext = {path = "../p4ext"}
proto = {path = "../proto"}
protobuf = "2.23.0"
