[package]
name = "proto"
version = "0.1.0"
authors = ["Debnil Sur <dsur@vmware.com>"]
build = "build.rs"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "proto"
path = "src/mod.rs"

[dependencies]
futures = "0.3.12"
grpcio = "0.9.0"
protobuf = "2.22.0"
protobuf-codegen = "2.22.0"

[build-dependencies]
protoc-grpcio = "3.0.0"